[package]
name = "blob_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc32fast = "1.3.2"
async-std = { version = "1.12.0", features = ["attributes"] }
tide = "0.16.0"
clap = { version = "4.0.18", features = ["derive"] }
