[package]
name = "blob_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc32fast = "1.3.2"
clap = { version = "4.0.18", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
prometheus-client = "0.18.1"
